--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -524,15 +524,15 @@
         <ul class="LeaseRouteInfo_List">
             <li><span>交船范围: </span> <input type="text" disabled value="Amsterdam-Rotterdam-Antwerp"></li>
             <li><span>还船范围: </span> <input type="text" disabled></li>
+            <li><span>货物: </span> <input type="text" value="谷物、矿石、煤炭或者类似产品" disabled></li>
+            <li><span>权重: </span> <input type="text" value="00.00"> %</li>
             <li><span>租期: </span> <input type="text" value="30-40"></li>
-            <li><span>佣金: </span> <input type="text" value="0.00%"></li>
-            <li><span>权重: </span> <input type="text" value="00.00%"></li>
-            <li><span>货物: </span> <input type="text" value=""></li>
-            <li><span>船舶规范: </span> <input type="text" value="172000"></li>
             <li><span>最大船龄: </span> <input type="text" value="00"></li>
+            <li><span>佣金: </span> <input type="text" value="00.00"> %</li>
+            <li><span>DWT: </span> <input type="text" value="172000"></li>
+            <li><span>LOA: </span> <input type="text" value="0000.00"></li>
+            <li><span>BEAM: </span> <input type="text" value="000.00"></li>
             <li><span>吃水: </span> <input type="text" value="00.00"></li>
-            <li><span>LOA: </span> <input type="text" value="0000"></li>
-            <li><span>BEAM: </span> <input type="text" value="000"></li>
             <li><span>空载航速: </span> <input type="text" value="00.00"></li>
             <li><span>满载航速: </span> <input type="text" value="00.00"></li>
         </ul>
