--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -1279,11 +1279,13 @@
             <ul id="berth_port_list">
             </ul>
         </div>
-        <div class="pier_info">
+        <div class="pier_info pier_select input_select">
             <span>码头名称：</span><input type="text" id="pier_name" placeholder="请输入码头名称">
+            <ul id ="pier_name_list">
+            </ul>
         </div>
         <div class="pier_info company_select input_select">
-            <span>公司：</span><input type="search" id="company_name" placeholder="请输入公司名">
+            <span>公司：</span><input type="text" id="company_name" placeholder="请输入公司名">
             <ul id ="company_name_list">
             </ul>
         </div>
