--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -1716,11 +1716,9 @@
         console.log(zoom);
         // 获取所有静止区域
         iconLayer(zoom, extent);
-//        if(!anchStatus){
-//            console.log("加载锚地数据");
-//            anchLayer();
-//        }
+        // 临界条件
         if(!anchStatus && ((zoom >= 10 && oldLevel < 10) || (zoom < 10  && oldLevel >= 10))){
+            // 刷新锚地数据, 显示锚地名
             anchLayer(zoom) // 变化锚地显示
         }
         oldLevel = zoom;
