--- a/public/stylesheets/newberth.css
+++ b/public/stylesheets/newberth.css
@@ -1,5 +1,5 @@
 #newBerth,#newAnch,#newBerthStatistics{background:#fff;position:fixed;z-index:100;display:none; border-radius: 10px;}
-#newBerth{width:600px;height:480px;top:50px;left:200px;display:none;background: rgba(6, 2, 5, 0.8)} /*设置了透明度*/
+#newBerth{width:600px;height:460px;top:50px;left:200px;display:none;background: rgba(6, 2, 5, 0.8)} /*设置了透明度*/
 #newAnch{width:500px;height:452px;top:50px;left:300px;display:none;background: rgba(6, 2, 5, 0.8)}
 #newBerthStatistics{width:600px;height:400px;top:50px;left:300px;display:none;background: rgba(6, 2, 5, 0.8)}
 .newBerthAnch_title{width:100%;height:30px;}
@@ -66,6 +66,7 @@ input:focus{border:1px solid transparent;box-shadow:0px 0px 2px 2px #2EB1EA;}
 /*泊位列表*/
 .berth_list{width:94%;margin:10px auto;height:200px;background: rgba(6, 2, 5, 0);overflow:hidden;overflow-y:scroll; border-radius: 5px;}
 .berth_list>li{height:50px;width:100%;border-bottom:1px solid #00B7FF;}
+.berth_list>li[highLight="true"]{background:#217BA2;}
 .oneBerth_info>li{height:50px;float:left;}
 .oneBerth_info>li:first-child{width:40px;line-height:53px;text-align:center;}
 .oneBerth_info>li:nth-child(2){width:40px;}
