--- a/public/stylesheets/newberth.css
+++ b/public/stylesheets/newberth.css
@@ -12,29 +12,40 @@
 .pier_info>span:nth-child(2){padding-left:5px;height:22px;line-height:22px;border:1px solid #989898;font-size:12px;cursor:pointer;border-radius:5px;}
 
 .span_select>span:nth-child(2){color:black;background: white;font-weight: 500}
+.pier_CargoType>span:nth-child(2){background:white;}
+.pier_CargoType>span:nth-child(2)>input{width:95px;height:20px;line-height:20px;background:#fff;border:transparent;font-size:12px;cursor:pointer;color:black;font-weight:500;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.pier_CargoType>span:nth-child(2)>span{display:inline-block;position:absolute;height:20px;line-height:20px;color:#323232;font-size:12px;right:8px;}
 .pier_info>input{display:inline-block;width:120px;padding-left:5px;height:22px;line-height:22px;font-size:12px;border:1px solid #989898;border-radius:5px;position:relative;top:-1px;font-weight: 500}
 .pier_info>ul{width:124px;max-height:100px;position:absolute;z-index:1000;cursor:pointer;top:24px;left:43px;background:#fff;border-radius:5px;overflow:hidden;overflow-y:scroll;display:none;}
-.pier_info>ul>li{width:96%;height:20px;font-size:12px;padding-left:5px;font-weight: 300;}
+.pier_info>ul>li{width:96%;height:20px;font-size:12px;padding-left:5px;}
+/*.pier_info>ul>li{width:96%;height:20px;font-size:12px;padding-left:5px;font-weight: 300;}*/
 
 .pier_info>ul>li:hover{background:#2EB1EA;color:#fff;}
 .pier_impExpType>ul{left:58px;width:44px;overflow-y:hidden;}
+.pier_UseType>ul{left:43px;width:45px;overflow-y:hidden;}
 .pier_CargoType>ul{left:44px;width:123px;overflow-y:hidden;}
 /*全局输入框获取焦点样式*/
 input:focus{border:1px solid transparent;box-shadow:0px 0px 2px 2px #2EB1EA;}
 
 /*码头信息输入样式*/
-.pier_BerthNum{margin-right:96px;}
-.pier_impExpType{margin-right:84px;}
+.pier_BerthNum{margin-right:29px;}
+.pier_impExpType{margin-right:29px;}
+.pier_UseType{margin-right:28px;}
 .port_select>span:nth-child(2){width:120px;}
 .company_select>ul{width:260px;left:-91px;}
 .pier_select>ul{width:200px;left:-5px;}
 .company_select>ul>li,.pier_select>ul>li{white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 .pier_BerthNum>input{width:30px;}
 .pier_impExpType>span:nth-child(2){width:40px;}
+.pier_UseType>span:nth-child(2){width:40px;}
 .pier_CargoType>span:nth-child(2){width:120px;}
+.pier_CargoType>ul>li label{cursor:pointer;}
+
+.pier_CargoType>ul>li input{position:relative;top:3px;}
 .pier_LongLat>input{width:170px;margin-right: 40px;}
 .pier_Location>input{width:222px;}
 .pier_Des>input{width:505px;}
+
 /*锚地信息输入样式*/
 .anchName_select>input{width:140px;}
 .anchName_select>ul{width:144px;left:57px;}
