--- a/public/stylesheets/standardRoute.css
+++ b/public/stylesheets/standardRoute.css
@@ -47,14 +47,14 @@
 .routeInfo_Install{width:96%;height:70px;margin:5px auto;}
 .routeInfo_List{padding-top:1px;}
 .routeInfo_List>li{display:inline-block;height:20px;font-size:13px;color:#fff;margin:0px 7px 0px;padding-right:2px;overflow:hidden;}
-.routeInfo_List>li:nth-child(3){display:inline-block;height:20px;font-size:13px;color:#fff;margin-right:110px;padding-right:2px;overflow:hidden;}
+.routeInfo_List>li:nth-child(3){display:inline-block;height:20px;font-size:13px;color:#fff;margin-right:10px;padding-right:2px;overflow:hidden;}
 
 .routeInfo_List>li>input{width:40px;height:16px;line-height:16px;padding-left:5px;border:1px solid #ccc;background:transparent;color:#fff;border-radius:5px;}
-.routeInfo_List>li:first-child>input,.routeInfo_List>li:nth-child(6)>input, .routeInfo_List>li:nth-child(7)>input,.routeInfo_List>li:nth-child(11)>input,.routeInfo_List>li:nth-child(12)>input{width:50px;}
+.routeInfo_List>li:first-child>input,.routeInfo_List>li:nth-child(7)>input, .routeInfo_List>li:nth-child(8)>input,.routeInfo_List>li:nth-child(12)>input,.routeInfo_List>li:nth-child(13)>input{width:50px;}
 
 /*.routeInfo_List>li:nth-child(6)>input,.routeInfo_List>li:nth-child(10)>input{width:30px;}*/
 /*.routeInfo_List>li:nth-child(8),.routeInfo_List>li:nth-child(12){width:110px;}*/
-.routeInfo_List>li:nth-child(8)>input,.routeInfo_List>li:nth-child(13)>input{width:14px;height:14px;cursor:pointer;position:relative;top:3px;}
+.routeInfo_List>li:nth-child(9)>input,.routeInfo_List>li:nth-child(14)>input{width:14px;height:14px;cursor:pointer;position:relative;top:3px;}
 
 /*中英文说明*/
 .routeDes>div{display:inline-block;width:49%;height:160px;font-size:14px;color:#fff;text-align:center;}
@@ -67,8 +67,9 @@
 
 
 /*期租航线弹出框样式*/
-#LeaseRouteInfo{width:420px;height:422px;position:fixed;z-index:100;top:70px;left:300px;border-radius: 10px;background: rgba(6, 2, 5, 0.8);display:none;}
+#LeaseRouteInfo{width:570px;height:422px;position:fixed;z-index:100;top:70px;left:300px;border-radius: 10px;background: rgba(6, 2, 5, 0.8);display:none;}
 /*信息管理*/
+.LeaseRouteInfo_List>li>i{display:inline-block;width:14px;height:14px;margin-left:5px;background:url('/images/placeholder.png') no-repeat;position:relative;top:2px;cursor:pointer;}
 .LeaseRouteInfo_Install{width:96%;height:154px;margin:5px auto;}
 .LeaseRouteInfo_List{padding-top:1px;}
 .LeaseRouteInfo_List>li{display:inline-block;width:115px;min-width:110px;height:22px;font-size:13px;color:#fff;margin:0px 7px 3px;padding-right:2px;}
@@ -76,28 +77,32 @@
 .LeaseRouteInfo_List>li>input{width:40px;height:16px;line-height:16px;padding-left:5px;border:1px solid #ccc;position:relative;top:-1px;background:transparent;color:#fff;border-radius:5px;}
 .LeaseRouteInfo_List>li:nth-child(1),.LeaseRouteInfo_List>li:nth-child(2){width:96%;min-width:96%;}
 .LeaseRouteInfo_List>li:nth-child(1)>input,.LeaseRouteInfo_List>li:nth-child(2)>input{border-color:transparent;width:300px;}
-.LeaseRouteInfo_List>li:nth-child(3){width:248px;}
-.LeaseRouteInfo_List>li:nth-child(3)>input{width:200px;border-color:transparent;}
-.LeaseRouteInfo_List>li:nth-child(6)>input{width:20px;}
+.LeaseRouteInfo_List>li:nth-child(3){width:248px;position:relative;}
+.LeaseRouteInfo_List>li:nth-child(7)>input{width:20px;}
 .LeaseRouteInfo_List>li:nth-child(8)>input{width:50px;}
-.LeaseRouteInfo_List>li:nth-child(9)>input{width:52px;}
-.LeaseRouteInfo_List>li:nth-child(10)>input{width:45px;}
+.LeaseRouteInfo_List>li:nth-child(10)>input{width:52px;}
+.LeaseRouteInfo_List>li:nth-child(11)>input{width:45px;}
+.LeaseRouteInfo_List>li:nth-child(13)>input{display:inline-block;width:14px;height:14px;position:relative;top:3px;}
 
 
 /*中英文说明*/
 .LeaseRouteDes{width:96%;margin:5px auto 2px;}
-.LeaseRouteDes>div{display:inline-block;width:196px;height:160px;font-size:14px;color:#fff;text-align:center;}
+.LeaseRouteDes>div{display:inline-block;width:268px;height:160px;font-size:14px;color:#fff;text-align:center;}
 .LeaseRouteDes>div>textarea{display:inline-block;width:96%;height:140px;font-size:13px;margin-left:5px;resize:none;overflow-y:scroll;}
 /*按钮操作*/
-.LeaseRouteInstall_Btn>div{display:inline-block;margin-top:10px;margin-left:84px;cursor:pointer;width:80px;height:30px;line-height:30px;text-align:center;background:#2EB1EA;border-radius:5px;color:#fff;font-size:14px;}
+.LeaseRouteInstall_Btn>div{display:inline-block;margin-top:10px;margin-left:135px;cursor:pointer;width:80px;height:30px;line-height:30px;text-align:center;background:#2EB1EA;border-radius:5px;color:#fff;font-size:14px;}
 .LeaseRouteInstall_Btn>div:hover{background:#00B7FF;}
 .LeaseRouteInstall_Btn>div:active{background:#217BA2;}
 
-
-
-
-
-
+/*期租货物选择*/
+.LeaseRouteInfo_List>li:nth-child(3)>span:nth-child(2){padding-left:5px;width:200px;height:22px;line-height:22px;border:1px solid #989898;font-size:12px;cursor:pointer;border-radius:5px;}
+.LeaseRouteInfo_List>li:nth-child(3)>span:nth-child(2)>input{width:178px;height:20px;line-height:20px;background:transparent;border:transparent;font-size:12px;cursor:pointer;color:#fff;font-weight:500;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.LeaseRouteInfo_List>li:nth-child(3)>span:nth-child(2)>span{display:inline-block;position:absolute;height:20px;line-height:20px;color:#fff;font-size:12px;right:10px;}
+.LeaseRouteInfo_List>li:nth-child(3)>ul{width:205px;max-height:100px;position:absolute;z-index:1000;cursor:pointer;top:24px;left:40px;background:#fff;border-radius:5px;overflow:hidden;display:none;}
+.LeaseRouteInfo_List>li:nth-child(3)>ul>li{width:100%;height:20px;font-size:12px;color:#323232;padding-left:5px;font-weight: 300;}
+.LeaseRouteInfo_List>li:nth-child(3)>ul>li:hover{background:#2EB1EA;color:#fff;}
+.LeaseRouteInfo_List>li:nth-child(3)>ul>li label{cursor:pointer;}
+.LeaseRouteInfo_List>li:nth-child(3)>ul>li input{position:relative;top:3px;}
 
 
 
