--- a/public/stylesheets/standardRoute.css
+++ b/public/stylesheets/standardRoute.css
@@ -95,10 +95,10 @@
 .LeaseRouteInstall_Btn>div:active{background:#217BA2;}
 
 /*期租货物选择*/
-.LeaseRouteInfo_List>li:nth-child(3)>span:nth-child(2){padding-left:5px;width:200px;height:22px;line-height:22px;border:1px solid #989898;font-size:12px;cursor:pointer;border-radius:5px;}
-.LeaseRouteInfo_List>li:nth-child(3)>span:nth-child(2)>input{width:178px;height:20px;line-height:20px;background:transparent;border:transparent;font-size:12px;cursor:pointer;color:#fff;font-weight:500;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
-.LeaseRouteInfo_List>li:nth-child(3)>span:nth-child(2)>span{display:inline-block;position:absolute;height:20px;line-height:20px;color:#fff;font-size:12px;right:10px;}
-.LeaseRouteInfo_List>li:nth-child(3)>ul{width:205px;max-height:100px;position:absolute;z-index:1000;cursor:pointer;top:24px;left:40px;background:#fff;border-radius:5px;overflow:hidden;display:none;}
+.LeaseRouteInfo_List>li:nth-child(3)>span:nth-child(2){height:16px;line-height:16px;padding-left:5px;border:1px solid #ccc;position:relative;top:1px;background:transparent;color:#fff;border-radius:5px;width:200px;font-size:12px;cursor:pointer;}
+.LeaseRouteInfo_List>li:nth-child(3)>span:nth-child(2)>input{width:178px;height:16px;line-height:16px;background:transparent;position:relative;top:-1px;border:transparent;font-size:12px;cursor:pointer;color:#fff;font-weight:500;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.LeaseRouteInfo_List>li:nth-child(3)>span:nth-child(2)>span{display:inline-block;position:absolute;height:15px;line-height:15px;color:#fff;font-size:12px;right:10px;}
+.LeaseRouteInfo_List>li:nth-child(3)>ul{width:205px;max-height:100px;position:absolute;z-index:1000;cursor:pointer;top:20px;left:40px;background:#fff;border-radius:5px;overflow:hidden;display:none;}
 .LeaseRouteInfo_List>li:nth-child(3)>ul>li{width:100%;height:20px;font-size:12px;color:#323232;padding-left:5px;font-weight: 300;}
 .LeaseRouteInfo_List>li:nth-child(3)>ul>li:hover{background:#2EB1EA;color:#fff;}
 .LeaseRouteInfo_List>li:nth-child(3)>ul>li label{cursor:pointer;}
