--- a/public/stylesheets/standardRoute.css
+++ b/public/stylesheets/standardRoute.css
@@ -67,22 +67,23 @@
 
 
 /*期租航线弹出框样式*/
-#LeaseRouteInfo{width:570px;height:422px;position:fixed;z-index:100;top:70px;left:300px;border-radius: 10px;background: rgba(6, 2, 5, 0.8);display:none;}
+#LeaseRouteInfo{width:570px;height:505px;position:fixed;z-index:100;top:70px;left:300px;border-radius: 10px;background: rgba(6, 2, 5, 0.8);display:block;}
 /*信息管理*/
-.LeaseRouteInfo_List>li>i{display:inline-block;width:14px;height:14px;margin-left:5px;background:url('/images/placeholder.png') no-repeat;position:relative;top:2px;cursor:pointer;}
-.LeaseRouteInfo_Install{width:96%;height:154px;margin:5px auto;}
+.LeaseRouteInfo_List>li>i{display:inline-block;width:14px;height:14px;background:url('/images/placeholder.png') no-repeat;position:relative;top:2px;left:-10px;cursor:pointer;}
+.LeaseRouteInfo_Install{width:96%;height:240px;margin:5px auto;}
 .LeaseRouteInfo_List{padding-top:1px;}
 .LeaseRouteInfo_List>li{display:inline-block;width:115px;min-width:110px;height:22px;font-size:13px;color:#fff;margin:0px 7px 3px;padding-right:2px;}
 .LeaseRouteInfo_List>li>span{display:inline-block;height:22px;line-height:22px;}
 .LeaseRouteInfo_List>li>input{width:40px;height:16px;line-height:16px;padding-left:5px;border:1px solid #ccc;position:relative;top:-1px;background:transparent;color:#fff;border-radius:5px;}
-.LeaseRouteInfo_List>li:nth-child(1),.LeaseRouteInfo_List>li:nth-child(2){width:96%;min-width:96%;}
-.LeaseRouteInfo_List>li:nth-child(1)>input,.LeaseRouteInfo_List>li:nth-child(2)>input{border-color:transparent;width:300px;}
-.LeaseRouteInfo_List>li:nth-child(3){width:248px;position:relative;}
-.LeaseRouteInfo_List>li:nth-child(7)>input{width:20px;}
-.LeaseRouteInfo_List>li:nth-child(8)>input{width:50px;}
-.LeaseRouteInfo_List>li:nth-child(10)>input{width:52px;}
-.LeaseRouteInfo_List>li:nth-child(11)>input{width:45px;}
-.LeaseRouteInfo_List>li:nth-child(13)>input{display:inline-block;width:14px;height:14px;position:relative;top:3px;}
+.LeaseRouteInfo_List>li:nth-child(1),.LeaseRouteInfo_List>li:nth-child(2),.LeaseRouteInfo_List>li:nth-child(3),.LeaseRouteInfo_List>li:nth-child(4){width:96%;min-width:96%;}
+.LeaseRouteInfo_List>li:nth-child(1)>input,.LeaseRouteInfo_List>li:nth-child(2)>input{border-color:transparent;width:320px;}
+.LeaseRouteInfo_List>li:nth-child(5){width:248px;position:relative;}
+.LeaseRouteInfo_List>li:nth-child(8)>input{width:20px;}
+.LeaseRouteInfo_List>li:nth-child(9)>input{width:20px;}
+.LeaseRouteInfo_List>li:nth-child(10)>input{width:50px;}
+.LeaseRouteInfo_List>li:nth-child(12)>input{width:52px;}
+.LeaseRouteInfo_List>li:nth-child(13)>input{width:45px;}
+.LeaseRouteInfo_List>li:nth-child(15)>input{display:inline-block;width:14px;height:14px;position:relative;top:3px;}
 
 
 /*中英文说明*/
@@ -90,21 +91,31 @@
 .LeaseRouteDes>div{display:inline-block;width:268px;height:160px;font-size:14px;color:#fff;text-align:center;}
 .LeaseRouteDes>div>textarea{display:inline-block;width:96%;height:140px;font-size:13px;margin-left:5px;resize:none;overflow-y:scroll;}
 /*按钮操作*/
-.LeaseRouteInstall_Btn>div{display:inline-block;margin-top:10px;margin-left:135px;cursor:pointer;width:80px;height:30px;line-height:30px;text-align:center;background:#2EB1EA;border-radius:5px;color:#fff;font-size:14px;}
+.LeaseRouteInstall_Btn>div{display:inline-block;margin-top:8px;margin-left:135px;cursor:pointer;width:80px;height:30px;line-height:30px;text-align:center;background:#2EB1EA;border-radius:5px;color:#fff;font-size:14px;}
 .LeaseRouteInstall_Btn>div:hover{background:#00B7FF;}
 .LeaseRouteInstall_Btn>div:active{background:#217BA2;}
 
 /*期租货物选择*/
-.LeaseRouteInfo_List>li:nth-child(3)>span:nth-child(2){height:16px;line-height:16px;padding-left:5px;border:1px solid #ccc;position:relative;top:1px;background:transparent;color:#fff;border-radius:5px;width:200px;font-size:12px;cursor:pointer;}
-.LeaseRouteInfo_List>li:nth-child(3)>span:nth-child(2)>input{width:178px;height:16px;line-height:16px;background:transparent;position:relative;top:-1px;border:transparent;font-size:12px;cursor:pointer;color:#fff;font-weight:500;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
-.LeaseRouteInfo_List>li:nth-child(3)>span:nth-child(2)>span{display:inline-block;position:absolute;height:15px;line-height:15px;color:#fff;font-size:12px;right:10px;}
-.LeaseRouteInfo_List>li:nth-child(3)>ul{width:205px;max-height:100px;position:absolute;z-index:1000;cursor:pointer;top:20px;left:40px;background:#fff;border-radius:5px;overflow:hidden;display:none;}
-.LeaseRouteInfo_List>li:nth-child(3)>ul>li{width:100%;height:20px;font-size:12px;color:#323232;padding-left:5px;font-weight: 300;}
-.LeaseRouteInfo_List>li:nth-child(3)>ul>li:hover{background:#2EB1EA;color:#fff;}
-.LeaseRouteInfo_List>li:nth-child(3)>ul>li label{cursor:pointer;}
-.LeaseRouteInfo_List>li:nth-child(3)>ul>li input{position:relative;top:3px;}
+.LeaseRouteInfo_List>li:nth-child(5)>span:nth-child(2){height:16px;line-height:16px;padding-left:5px;border:1px solid #ccc;position:relative;top:1px;background:transparent;color:#fff;border-radius:5px;width:200px;font-size:12px;cursor:pointer;}
+.LeaseRouteInfo_List>li:nth-child(5)>span:nth-child(2)>input{width:178px;height:16px;line-height:16px;background:transparent;position:relative;top:-1px;border:transparent;font-size:12px;cursor:pointer;color:#fff;font-weight:500;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.LeaseRouteInfo_List>li:nth-child(5)>span:nth-child(2)>span{display:inline-block;position:absolute;height:15px;line-height:15px;color:#fff;font-size:12px;right:10px;}
+.LeaseRouteInfo_List>li:nth-child(5)>ul{width:205px;max-height:100px;position:absolute;z-index:1000;cursor:pointer;top:20px;left:40px;background:#fff;border-radius:5px;overflow:hidden;display:none;}
+.LeaseRouteInfo_List>li:nth-child(5)>ul>li{width:100%;height:20px;font-size:12px;color:#323232;padding-left:5px;font-weight: 300;}
+.LeaseRouteInfo_List>li:nth-child(5)>ul>li:hover{background:#2EB1EA;color:#fff;}
+.LeaseRouteInfo_List>li:nth-child(5)>ul>li label{display:inline-block;cursor:pointer;width:100%;}
+.LeaseRouteInfo_List>li:nth-child(5)>ul>li input{position:relative;top:3px;}
 
-
+/*交船港、还船港列表*/
+.LeaseRouteInfo_List>.routePayStillPort{height:40px;position:relative;}
+.LeaseRouteInfo_List>.routePayStillPort>span{display:inline-block;height:40px;line-height:24px;overflow:hidden;}
+.LeaseRouteInfo_List>.routePayStillPort>span:nth-child(2){width:460px;height:40px;cursor:auto;white-space:nowrap;overflow-x:scroll;}
+.PayStillPort_List{width:5000px;}
+.PayStillPort_List>li{float:left;display:inline-block;height:18px;margin-top:2px;margin-left:5px;padding:0px 5px;border:1px solid #989898;border-radius:5px;background: rgba(255,255,255,0.2)}
+.PayStillPort_List>li>span{display:inline-block;height:18px;line-height:18px;font-size:12px;margin-right:6px;position:relative;top:-4px;}
+.PayStillPort_List>li>i{display:inline-block;width:11px;height:11px;position:relative;background:url("/images/cancel.png") no-repeat;cursor:pointer;}
+/*.PayStillPort_List>li>i{display:inline-block;width:11px;height:11px;position:relative;top:-2px;background:url("/images/cancel.png") no-repeat;cursor:pointer;}*/
+.PayStillPort_List>li>i:hover{background:url("/images/cancel-hover.png") no-repeat;}
+.PayStillPort_List>li>i:hover{display:inline-block;width:11px;height:11px;position:relative;cursor:pointer;background:url("/images/cancel-hover.png") no-repeat;}
 
 
 
