--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -1577,7 +1577,7 @@
         })
     });
 
-    // 被选择的图标
+//    // 被选择的图标
     var choosed = new ol.style.Style({
         image: new ol.style.Icon({
             src: 'images/choose.png'
@@ -1591,21 +1591,21 @@
         })
     });
 
-    // 已添加港口
-    var port_yes =  new ol.style.Style({
-        image: new ol.style.Icon({
-            src: 'images/pointCheck.png',
-            anchor: [0.5, 0.8]
-        })
-    });
-
-    // 待选港口
-    var port_nor =  new ol.style.Style({
-        image: new ol.style.Icon({
-            src: 'images/pointAdd.png',
-            anchor: [0.5, 0.8]
-        })
-    });
+//    // 已添加港口
+//    var port_yes =  new ol.style.Style({
+//        image: new ol.style.Icon({
+//            src: 'images/pointCheck.png',
+//            anchor: [0.5, 0.8]
+//        })
+//    });
+//
+//    // 待选港口
+//    var port_nor =  new ol.style.Style({
+//        image: new ol.style.Icon({
+//            src: 'images/pointAdd.png',
+//            anchor: [0.5, 0.8]
+//        })
+//    });
 
     // 待选泊位/锚地图标
     var point_status = {
