--- a/public/stylesheets/standardRoute.css
+++ b/public/stylesheets/standardRoute.css
@@ -47,7 +47,7 @@
 .routeInfo_Install{width:96%;height:70px;margin:5px auto;}
 .routeInfo_List{padding-top:1px;}
 .routeInfo_List>li{display:inline-block;height:20px;font-size:13px;color:#fff;margin:0px 7px 0px;padding-right:2px;overflow:hidden;}
-.routeInfo_List>li:nth-child(3){display:inline-block;height:20px;font-size:13px;color:#fff;margin-right:10px;padding-right:2px;overflow:hidden;}
+.routeInfo_List>li:nth-child(3){display:inline-block;height:20px;font-size:13px;color:#fff;margin-right:12px;padding-right:2px;overflow:hidden;}
 
 .routeInfo_List>li>input{width:40px;height:16px;line-height:16px;padding-left:5px;border:1px solid #ccc;background:transparent;color:#fff;border-radius:5px;}
 .routeInfo_List>li:first-child>input,.routeInfo_List>li:nth-child(7)>input, .routeInfo_List>li:nth-child(8)>input,.routeInfo_List>li:nth-child(12)>input,.routeInfo_List>li:nth-child(13)>input{width:50px;}
@@ -73,6 +73,7 @@
 #LeaseRouteInfo .routeStartEnd>div{font-size:14px;color:#fff;width:98%;margin:0px auto 5px;height:40px;}
 #LeaseRouteInfo .routeStartEnd>.routePort_Select>div{width:100%;}
 #LeaseRouteInfo .routeStartEnd .routePoint_infoShow{font-size:12px;}
+#LeaseRouteInfo .routeStartEnd .routeStartEndPort>span:nth-child(1){line-height:40px;height:40px;}
 #LeaseRouteInfo .routeStartEnd .routeStartEndPort>span:nth-child(2){width:460px;}
 /*信息管理*/
 .LeaseRouteInfo_List>li>i{display:inline-block;width:14px;height:14px;background:url('/images/placeholder.png') no-repeat;position:relative;top:2px;left:-10px;cursor:pointer;}
@@ -81,12 +82,11 @@
 .LeaseRouteInfo_List>li{display:inline-block;width:115px;min-width:110px;height:22px;font-size:13px;color:#fff;margin:0px 7px 3px;padding-right:2px;}
 .LeaseRouteInfo_List>li>span{display:inline-block;height:22px;line-height:22px;}
 .LeaseRouteInfo_List>li>input{width:40px;height:16px;line-height:16px;padding-left:5px;border:1px solid #ccc;position:relative;top:-1px;background:transparent;color:#fff;border-radius:5px;}
-/*.LeaseRouteInfo_List>li:nth-child(1),.LeaseRouteInfo_List>li:nth-child(2),.LeaseRouteInfo_List>li:nth-child(3),.LeaseRouteInfo_List>li:nth-child(4){width:96%;min-width:96%;}*/
-/*.LeaseRouteInfo_List>li:nth-child(1)>input,.LeaseRouteInfo_List>li:nth-child(2)>input{border-color:transparent;width:320px;}*/
 .LeaseRouteInfo_List>li:nth-child(1){width:248px;position:relative;}
 .LeaseRouteInfo_List>li:nth-child(4)>input{width:20px;}
 .LeaseRouteInfo_List>li:nth-child(5)>input{width:20px;}
 .LeaseRouteInfo_List>li:nth-child(6)>input{width:50px;}
+.LeaseRouteInfo_List>li:nth-child(7)>input{width:50px;}
 .LeaseRouteInfo_List>li:nth-child(8)>input{width:52px;}
 .LeaseRouteInfo_List>li:nth-child(9)>input{width:45px;}
 .LeaseRouteInfo_List>li:nth-child(11)>input{display:inline-block;width:14px;height:14px;position:relative;top:3px;}
@@ -107,19 +107,6 @@
 .LeaseRouteInfo_List>li:nth-child(1)>ul>li:hover{background:#2EB1EA;color:#fff;}
 .LeaseRouteInfo_List>li:nth-child(1)>ul>li label{display:inline-block;cursor:pointer;width:100%;}
 .LeaseRouteInfo_List>li:nth-child(1)>ul>li input{position:relative;top:3px;}
-
-
-/*!*交船港、还船港列表*!*/
-/*.LeaseRouteInfo_List>.routePayStillPort{height:40px;position:relative;}*/
-/*.LeaseRouteInfo_List>.routePayStillPort>span{display:inline-block;height:40px;line-height:24px;overflow:hidden;}*/
-/*.LeaseRouteInfo_List>.routePayStillPort>span:nth-child(2){width:460px;height:40px;cursor:auto;white-space:nowrap;overflow-x:scroll;}*/
-/*.PayStillPort_List{width:5000px;}*/
-/*.PayStillPort_List>li{float:left;display:inline-block;height:18px;margin-top:2px;margin-left:5px;padding:0px 5px;border:1px solid #989898;border-radius:5px;background: rgba(255,255,255,0.2)}*/
-/*.PayStillPort_List>li>span{display:inline-block;height:18px;line-height:18px;font-size:12px;margin-right:6px;position:relative;top:-4px;}*/
-/*.PayStillPort_List>li>i{display:inline-block;width:11px;height:11px;position:relative;background:url("/images/cancel.png") no-repeat;cursor:pointer;}*/
-/*!*.PayStillPort_List>li>i{display:inline-block;width:11px;height:11px;position:relative;top:-2px;background:url("/images/cancel.png") no-repeat;cursor:pointer;}*!*/
-/*.PayStillPort_List>li>i:hover{background:url("/images/cancel-hover.png") no-repeat;}*/
-/*.PayStillPort_List>li>i:hover{display:inline-block;width:11px;height:11px;position:relative;cursor:pointer;background:url("/images/cancel-hover.png") no-repeat;}*/
 
 
 
