--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -481,8 +481,6 @@
             <span>交船港：</span>
             <span>
                 <ul class="StartEndPort_List">
-                    <!--<li><span>sadasdqw</span><i></i></li>-->
-                    <!--<li><span>sadasdqw</span><i></i></li>-->
                 </ul>
             </span>
         </div>
@@ -490,8 +488,6 @@
             <span>还船港：</span>
             <span>
                 <ul class="StartEndPort_List">
-                    <!--<li><span>sadasdqw</span><i class="close"></i></li>-->
-                    <!--<li><span>sadasdqw</span><i></i></li>-->
                 </ul>
             </span>
         </div>
@@ -500,51 +496,24 @@
     <!--航线信息设置-->
     <div class="LeaseRouteInfo_Install">
         <ul class="LeaseRouteInfo_List">
-            <!--<li class="routePort_Start"><span>交船范围: </span> <input type="text" disabled class="delivery" value="Cape Comorin / Haldia range including Sri Lanka"><i></i></li>-->
-            <!--<li class="routePort_End"><span>还船范围: </span> <input type="text" disabled class="redelivery" value="Recalada – Rio de Janeiro"><i></i></li>-->
-            <!--&lt;!&ndash;<li><span>货物: </span> <input type="text" value="谷物、矿石、煤炭或者类似产品" disabled></li>&ndash;&gt;-->
-            <!--<li class="routePayStillPort routePayPort_Select">-->
-                <!--<span>交船港：</span>-->
-                <!--<span>-->
-                <!--<ul class="PayStillPort_List">-->
-                    <!--<li><span>sadasdqw</span><i></i></li>-->
-                    <!--<li><span>sadasdqw</span><i></i></li>-->
-                <!--</ul>-->
-            <!--</span>-->
-            <!--</li>-->
-            <!--<li class="routePayStillPort routeStillPort_Select">-->
-                <!--<span>还船港：</span>-->
-                <!--<span>-->
-                    <!--<ul class="PayStillPort_List">-->
-                        <!--<li><span>sadasdqw</span><i class="close"></i></li>-->
-                        <!--<li><span>sadasdqw</span><i></i></li>-->
-                        <!--<li><span>sadasdqw</span><i></i></li>-->
-                        <!--<li><span>sadasdqw</span><i></i></li>-->
-                        <!--<li><span>sadasdqw</span><i></i></li>-->
-                    <!--</ul>-->
-                <!--</span>-->
-            <!--</li>-->
             <li class="route_CargoType">
                 <span>货物：</span><span><input type="text" value="" disabled/><span>(0)</span></span>
-                <ul>
-                    <!--<li><label><input type="checkbox"> Lron Ore</label></li>-->
-                    <!--<li><label><input type="checkbox"> Lron Ore1</label></li>-->
-                </ul>
+                <ul></ul>
             </li>
-            <li><span>权重: </span> <input type="text" value="00.00"> %</li>
-            <li><span>佣金: </span> <input type="text" value="00.00"> %</li>
-            <li><span>租期: </span> <input type="text" value="30"> - <input type="text" value="40"></li>
-            <li><span>最大船龄: </span> <input type="text" value="00"></li>
-            <li><span>DWT: </span> <input type="text" value="172000"></li>
-            <li><span>容积: </span> <input type="text" value="00.00"></li>
-            <li><span>LOA: </span> <input type="text" value="0000.00"></li>
-            <li><span>BEAM: </span> <input type="text" value="000.00"></li>
-            <li><span>吃水: </span> <input type="text" value="00.00"></li>
+            <li><span>权重: </span> <input type="text"> %</li>
+            <li><span>佣金: </span> <input type="text"> %</li>
+            <li><span>租期: </span> <input type="text"> - <input type="text"></li>
+            <li><span>最大船龄: </span> <input type="text"></li>
+            <li><span>DWT: </span> <input type="text"></li>
+            <li><span>容积: </span> <input type="text"></li>
+            <li><span>LOA: </span> <input type="text"></li>
+            <li><span>BEAM: </span> <input type="text"></li>
+            <li><span>吃水: </span> <input type="text"></li>
             <li><span>海上不耗柴油 </span> <input type="checkbox"></li>
-            <li><span>空驶航速: </span> <input type="text" value="00.00"></li>
-            <li><span>空驶油耗: </span> <input type="text" value="00.00"></li>
-            <li><span>满载航速: </span> <input type="text" value="00.00"></li>
-            <li><span>满载油耗: </span> <input type="text" value="00.00"></li>
+            <li><span>空驶航速: </span> <input type="text"></li>
+            <li><span>空驶油耗: </span> <input type="text"></li>
+            <li><span>满载航速: </span> <input type="text"></li>
+            <li><span>满载油耗: </span> <input type="text"></li>
         </ul>
     </div>
     <div class="dividing_line"></div>
