--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -871,8 +871,35 @@
 </div>
 
 
-
-
+<!--
+    泊位统计分析
+-->
+<div id="berth_SA">
+    <div class="fleet_title">
+        <span>泊位统计分析</span>
+        <div class="title_offbtn"></div>
+    </div>
+    <div class="dividing_line"></div>
+    <div class="BerthSA_Type">
+        <div class="BerthSA_ShipType">
+            <select>
+                <option value="">aaaaaa</option>
+            </select>
+            <div class="BerthSA_ShipTypeList">
+                <span><input type="text" value="" disabled/><span>(0)</span></span>
+                <ul>
+                    <li><label><input type="checkbox">铁矿石</label></li>
+                    <li><label><input type="checkbox">原油</label></li>
+                    <li><label><input type="checkbox">煤炭</label></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="dividing_line"></div>
+    <div class="BerthSA_Statistics"></div>
+    <div class="dividing_line"></div>
+    <div class="BerthSA_DataList"></div>
+</div>
 
 
 
