--- a/public/stylesheets/newberth.css
+++ b/public/stylesheets/newberth.css
@@ -1,5 +1,5 @@
-#newBerth,#newAnch,#newBerthStatistics{background:#fff;position:fixed;z-index:100;display:none; border-radius: 10px;}
-#newBerth{width:600px;height:460px;top:50px;left:200px;display:none;background: rgba(6, 2, 5, 0.8)} /*设置了透明度*/
+#newBerth,#newAnch,#newBerthStatistics,#berth_SA{background:#fff;position:fixed;z-index:100;display:none; border-radius: 10px;}
+#newBerth{width:640px;height:450px;top:50px;left:200px;display:none;background: rgba(6, 2, 5, 0.8)} /*设置了透明度*/
 #newAnch{width:500px;height:452px;top:50px;left:300px;display:none;background: rgba(6, 2, 5, 0.8)}
 #newBerthStatistics{width:600px;height:400px;top:50px;left:300px;display:none;background: rgba(6, 2, 5, 0.8)}
 .newBerthAnch_title{width:100%;height:30px;}
@@ -9,7 +9,7 @@
 .pierInfo_list,.anchInfo_list,.anchInfo_intentPort{width:94%;margin:0 auto;}
 .pier_info{display: inline-block;height:32px;position:relative;margin-right:5px;margin-top:5px;}
 .pier_info>span{display:inline-block;height:24px;line-height:24px;font-size:14px;color:white}
-.pier_info>span:nth-child(2){padding-left:5px;height:22px;line-height:22px;border:1px solid #989898;font-size:12px;cursor:pointer;border-radius:5px;}
+.pier_info>span:nth-child(2){padding-left:5px;height:22px;line-height:22px;border:1px solid #989898;font-size:12px;cursor:pointer;border-radius:5px;white-space:nowrap;text-overflow:ellipsis;}
 
 .span_select>span:nth-child(2){color:black;background: white;font-weight: 500}
 .pier_CargoType>span:nth-child(2){background:white;}
@@ -28,10 +28,11 @@
 input:focus{border:1px solid transparent;box-shadow:0px 0px 2px 2px #2EB1EA;}
 
 /*码头信息输入样式*/
-.pier_BerthNum{margin-right:29px;}
-.pier_impExpType{margin-right:29px;}
-.pier_UseType{margin-right:28px;}
-.port_select>span:nth-child(2){width:120px;}
+.pier_BerthNum{margin-right:42px;}
+.pier_impExpType{margin-right:42px;}
+.pier_UseType{margin-right:42px;}
+.port_select>span:nth-child(2){width:160px;}
+.port_select>ul{width:164px;}
 .company_select>ul{width:260px;left:-91px;}
 .pier_select>ul{width:200px;left:-5px;}
 .company_select>ul>li,.pier_select>ul>li{white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
@@ -42,9 +43,9 @@ input:focus{border:1px solid transparent;box-shadow:0px 0px 2px 2px #2EB1EA;}
 .pier_CargoType>ul>li label{display:inline-block;height:20px;cursor:pointer;width:100%;}
 
 .pier_CargoType>ul>li input{position:relative;top:3px;}
-.pier_LongLat>input{width:170px;margin-right: 40px;}
-.pier_Location>input{width:222px;}
-.pier_Des>input{width:505px;}
+.pier_LongLat>input{width:170px;margin-right: 46px;}
+.pier_Location>input{width:256px;}
+.pier_Des>input{width:545px;}
 
 /*锚地信息输入样式*/
 .anchName_select>input{width:140px;}
@@ -75,7 +76,7 @@ input:focus{border:1px solid transparent;box-shadow:0px 0px 2px 2px #2EB1EA;}
 .add_oneIntentPort_btn:active{background:url("/images/add_intentPort_down.png") no-repeat;}
 
 /*泊位列表*/
-.berth_list{width:94%;margin:10px auto;height:200px;background: rgba(6, 2, 5, 0);overflow:hidden;overflow-y:scroll; border-radius: 5px;}
+.berth_list{width:91%;margin:10px auto;height:200px;background: rgba(6, 2, 5, 0);overflow:hidden;overflow-y:scroll; border-radius: 5px;}
 .berth_list>li{height:50px;width:100%;border-bottom:1px solid #00B7FF;}
 .berth_list>li[highLight="true"]{background:rgba(6, 95, 134, 0.5);}
 /*.berth_list>li[highLight="true"]{background:#217BA2;}*/
@@ -110,7 +111,7 @@ input:focus{border:1px solid transparent;box-shadow:0px 0px 2px 2px #2EB1EA;}
 
 
 /*泊位按钮*/
-.pier_btn{width:360px;height:40px;margin:16px auto;}
+.pier_btn{width:360px;height:40px;margin:10px auto;}
 .berthAnch_btn{display:inline-block;width:60px;height:30px;line-height:30px;text-align:center;cursor:pointer;border-radius:5px;border:0px solid transparent;font-size:14px;color:#fff;background:#2EB1EA;outline:none;}
 .pier_btn>button{margin-right:85px;}
 .pier_btn>button:last-child{margin-right:0px;}
@@ -136,5 +137,21 @@ input:focus{border:1px solid transparent;box-shadow:0px 0px 2px 2px #2EB1EA;}
 
 
 
+/*
+    泊位统计分析
+*/
+#berth_SA{width:600px;height:400px;top:50px;left:300px;display:none;background: rgba(6, 2, 5, 0.8)}
+/*统计信息分类部分*/
+.BerthSA_Type{width:90%;height:24px;margin:3px auto;background:#ccc;}
+.BerthSA_Type>.BerthSA_ShipType{height:100%;width:270px;background:#666;}
+.BerthSA_Type>.BerthSA_ShipType>select{display:inline-block;width:80px;height:22px;line-height:22px;background:transparent;border:1px solid #fff;border-radius:5px;color:#fff;font-size:13px;}
 
-
+.BerthSA_ShipType>.BerthSA_ShipTypeList{display:inline-block;width:168px;position:relative;min-width:110px;height:22px;font-size:13px;color:#fff;}
+.BerthSA_ShipType>.BerthSA_ShipTypeList>span{display:inline-block;height:20px;line-height:20px;padding-left:5px;border:1px solid #ccc;position:relative;top:1px;background:transparent;color:#fff;border-radius:5px;width:160px;font-size:12px;cursor:pointer;}
+.BerthSA_ShipType>.BerthSA_ShipTypeList>span>input{width:138px;height:16px;line-height:16px;background:transparent;position:relative;top:-1px;border:transparent;font-size:12px;cursor:pointer;color:#fff;font-weight:500;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.BerthSA_ShipType>.BerthSA_ShipTypeList>span>span{display:inline-block;position:absolute;height:18px;line-height:18px;color:#fff;font-size:12px;right:6px;}
+.BerthSA_ShipType>.BerthSA_ShipTypeList>ul{width:165px;max-height:100px;position:absolute;z-index:1000;cursor:pointer;top:22px;left:1px;background:#fff;border-radius:5px;overflow:hidden;display:none;}
+.BerthSA_ShipType>.BerthSA_ShipTypeList>ul>li{width:100%;height:20px;font-size:12px;color:#323232;padding-left:5px;font-weight: 300;}
+.BerthSA_ShipType>.BerthSA_ShipTypeList>ul>li:hover{background:#2EB1EA;color:#fff;}
+.BerthSA_ShipType>.BerthSA_ShipTypeList>ul>li label{display:inline-block;cursor:pointer;width:100%;}
+.BerthSA_ShipType>.BerthSA_ShipTypeList>ul>li input{position:relative;top:3px;margin-right:5px;}
