--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -496,10 +496,10 @@
     <!--航线信息设置-->
     <div class="LeaseRouteInfo_Install">
         <ul class="LeaseRouteInfo_List">
-            <li class="route_CargoType">
-                <span>货物：</span><span><input type="text" value="" disabled/><span>(0)</span></span>
-                <ul></ul>
-            </li>
+            <!--<li class="route_CargoType">-->
+                <!--<span>货物：</span><span><input type="text" value="" disabled/><span>(0)</span></span>-->
+                <!--<ul></ul>-->
+            <!--</li>-->
             <li><span>权重: </span> <input type="text"> %</li>
             <li><span>佣金: </span> <input type="text"> %</li>
             <li><span>租期: </span> <input type="text"> - <input type="text"></li>
