--- a/public/stylesheets/standardRoute.css
+++ b/public/stylesheets/standardRoute.css
@@ -82,14 +82,14 @@
 .LeaseRouteInfo_List>li{display:inline-block;width:115px;min-width:110px;height:22px;font-size:13px;color:#fff;margin:0px 7px 3px;padding-right:2px;}
 .LeaseRouteInfo_List>li>span{display:inline-block;height:22px;line-height:22px;}
 .LeaseRouteInfo_List>li>input{width:40px;height:16px;line-height:16px;padding-left:5px;border:1px solid #ccc;position:relative;top:-1px;background:transparent;color:#fff;border-radius:5px;}
-.LeaseRouteInfo_List>li:nth-child(1){width:248px;position:relative;}
+/*.LeaseRouteInfo_List>li:nth-child(1){width:248px;position:relative;}*/
+.LeaseRouteInfo_List>li:nth-child(3)>input{width:20px;}
 .LeaseRouteInfo_List>li:nth-child(4)>input{width:20px;}
-.LeaseRouteInfo_List>li:nth-child(5)>input{width:20px;}
+.LeaseRouteInfo_List>li:nth-child(5)>input{width:50px;}
 .LeaseRouteInfo_List>li:nth-child(6)>input{width:50px;}
-.LeaseRouteInfo_List>li:nth-child(7)>input{width:50px;}
-.LeaseRouteInfo_List>li:nth-child(8)>input{width:52px;}
-.LeaseRouteInfo_List>li:nth-child(9)>input{width:45px;}
-.LeaseRouteInfo_List>li:nth-child(11)>input{display:inline-block;width:14px;height:14px;position:relative;top:3px;}
+.LeaseRouteInfo_List>li:nth-child(7)>input{width:52px;}
+.LeaseRouteInfo_List>li:nth-child(8)>input{width:45px;}
+.LeaseRouteInfo_List>li:nth-child(10)>input{display:inline-block;width:14px;height:14px;position:relative;top:3px;}
 /*中英文说明*/
 .LeaseRouteDes{width:96%;margin:5px auto 2px;}
 .LeaseRouteDes>div{display:inline-block;width:268px;height:160px;font-size:14px;color:#fff;text-align:center;}
@@ -99,14 +99,14 @@
 .LeaseRouteInstall_Btn>div:hover{background:#00B7FF;}
 .LeaseRouteInstall_Btn>div:active{background:#217BA2;}
 /*期租货物选择*/
-.LeaseRouteInfo_List>li:nth-child(1)>span:nth-child(2){height:16px;line-height:16px;padding-left:5px;border:1px solid #ccc;position:relative;top:1px;background:transparent;color:#fff;border-radius:5px;width:200px;font-size:12px;cursor:pointer;}
-.LeaseRouteInfo_List>li:nth-child(1)>span:nth-child(2)>input{width:178px;height:16px;line-height:16px;background:transparent;position:relative;top:-1px;border:transparent;font-size:12px;cursor:pointer;color:#fff;font-weight:500;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
-.LeaseRouteInfo_List>li:nth-child(1)>span:nth-child(2)>span{display:inline-block;position:absolute;height:15px;line-height:15px;color:#fff;font-size:12px;right:10px;}
-.LeaseRouteInfo_List>li:nth-child(1)>ul{width:205px;max-height:100px;position:absolute;z-index:1000;cursor:pointer;top:20px;left:40px;background:#fff;border-radius:5px;overflow:hidden;display:none;}
-.LeaseRouteInfo_List>li:nth-child(1)>ul>li{width:100%;height:20px;font-size:12px;color:#323232;padding-left:5px;font-weight: 300;}
-.LeaseRouteInfo_List>li:nth-child(1)>ul>li:hover{background:#2EB1EA;color:#fff;}
-.LeaseRouteInfo_List>li:nth-child(1)>ul>li label{display:inline-block;cursor:pointer;width:100%;}
-.LeaseRouteInfo_List>li:nth-child(1)>ul>li input{position:relative;top:3px;}
+/*.LeaseRouteInfo_List>li:nth-child(1)>span:nth-child(2){height:16px;line-height:16px;padding-left:5px;border:1px solid #ccc;position:relative;top:1px;background:transparent;color:#fff;border-radius:5px;width:200px;font-size:12px;cursor:pointer;}*/
+/*.LeaseRouteInfo_List>li:nth-child(1)>span:nth-child(2)>input{width:178px;height:16px;line-height:16px;background:transparent;position:relative;top:-1px;border:transparent;font-size:12px;cursor:pointer;color:#fff;font-weight:500;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}*/
+/*.LeaseRouteInfo_List>li:nth-child(1)>span:nth-child(2)>span{display:inline-block;position:absolute;height:15px;line-height:15px;color:#fff;font-size:12px;right:10px;}*/
+/*.LeaseRouteInfo_List>li:nth-child(1)>ul{width:205px;max-height:100px;position:absolute;z-index:1000;cursor:pointer;top:20px;left:40px;background:#fff;border-radius:5px;overflow:hidden;display:none;}*/
+/*.LeaseRouteInfo_List>li:nth-child(1)>ul>li{width:100%;height:20px;font-size:12px;color:#323232;padding-left:5px;font-weight: 300;}*/
+/*.LeaseRouteInfo_List>li:nth-child(1)>ul>li:hover{background:#2EB1EA;color:#fff;}*/
+/*.LeaseRouteInfo_List>li:nth-child(1)>ul>li label{display:inline-block;cursor:pointer;width:100%;}*/
+/*.LeaseRouteInfo_List>li:nth-child(1)>ul>li input{position:relative;top:3px;}*/
 
 
 
