--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -388,11 +388,13 @@
     <div class="routeStartEnd">
         <div class="routePort_Select">
             <div class="routePort_Start">
-                标准出发港:<span class="routePoint_infoShow"></span>
+                <!--标准出发港:<span class="routePoint_infoShow"></span>-->
+                标准出发港:<input type="text" class="routePoint_infoShow">
                 <i></i>
             </div>
             <div class="routePort_End">
-                标准目的港:<span class="routePoint_infoShow"></span>
+                <!--标准目的港:<span class="routePoint_infoShow"></span>-->
+                标准目的港:<input type="text" class="routePoint_infoShow">
                 <i></i>
             </div>
         </div>
@@ -469,11 +471,13 @@
     <div class="routeStartEnd">
         <div class="routePort_Select">
             <div class="routePort_Start">
-                交船范围:<span class="routePoint_infoShow"></span>
+                <!--交船范围:<span class="routePoint_infoShow"></span>-->
+                交船范围:<input type="text" class="routePoint_infoShow">
                 <i></i>
             </div>
             <div class="routePort_End">
-                还船范围:<span class="routePoint_infoShow"></span>
+                <!--还船范围:<span class="routePoint_infoShow"></span>-->
+                还船范围:<input type="text" class="routePoint_infoShow">
                 <i></i>
             </div>
         </div>
